<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customAttr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <anylife.scrolltextview.ScrollTextView
        android:id="@+id/scrollText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close"
        android:background="#33336699"
        customAttr:clickEnable="false"
        customAttr:isHorizontal="true"
        customAttr:speed="4"
        customAttr:text="请点击设置来指定相关属性"
        customAttr:text_color="@android:color/white"
        customAttr:text_size="22sp" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginRight="25dp"
        android:text="@string/confirm"
        android:background="#ff336699"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_size_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size_tag"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/text_size_seek_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:min="16"
                android:max="100"
                app:layout_constraintBottom_toBottomOf="@id/text_size_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_size_tag"
                app:layout_constraintTop_toTopOf="@id/text_size_tag" />

            <TextView
                android:id="@+id/text_color_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/text_color_tag"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_size_tag" />

            <TextView
                android:id="@+id/text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                app:layout_constraintBottom_toBottomOf="@id/text_color_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_color_tag"
                app:layout_constraintTop_toTopOf="@id/text_color_tag" />


            <TextView
                android:id="@+id/bg_color_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/text_bg_color_tag"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_color_tag" />


            <TextView
                android:id="@+id/bg_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:gravity="center"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/bg_color_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bg_color_tag"
                app:layout_constraintTop_toTopOf="@id/bg_color_tag" />


<!--            <com.larswerkman.holocolorpicker.ColorPicker-->
<!--                android:id="@+id/picker"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->


            <EditText
                android:id="@+id/text_input"
                app:layout_constraintTop_toBottomOf="@id/bg_color_tag"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/input_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>